SVN_SILENT made messages (.desktop file)

--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -79,6 +79,7 @@ Name[sr@latin]=Gadu‑Gadu
 Name[sv]=Gadu-Gadu
 Name[th]=Gadu-Gadu
 Name[tr]=Gadu-Gadu
+Name[ug]=Gadu-Gadu
 Name[uk]=Gadu-Gadu
 Name[wa]=Gadu-Gadu
 Name[x-test]=xxGadu-Gaduxx
