--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -78,6 +78,7 @@ Name[sr@latin]=GroupWise
 Name[sv]=GroupWise
 Name[th]=GroupWise
 Name[tr]=GroupWise
+Name[ug]=GroupWise
 Name[uk]=GroupWise
 Name[wa]=GroupWise
 Name[x-test]=xxGroupWisexx
