--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -80,6 +80,7 @@ Name[sr@latin]=Jabber
 Name[sv]=Jabber
 Name[th]=Jabber
 Name[tr]=Jabber
+Name[ug]=Jabber
 Name[uk]=Jabber
 Name[wa]=Jabber
 Name[x-test]=xxJabberxx
