--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -78,6 +78,7 @@ Name[sr@latin]=Skype
 Name[sv]=Skype
 Name[th]=Skype
 Name[tr]=Skype
+Name[ug]=Skype
 Name[uk]=Skype
 Name[wa]=Skype
 Name[x-test]=xxSkypexx
