--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -79,6 +79,7 @@ Name[sr@latin]=Yahoo
 Name[sv]=Yahoo
 Name[th]=Yahoo
 Name[tr]=Yahoo
+Name[ug]=ياخۇ
 Name[uk]=Yahoo
 Name[wa]=Yahoo
 Name[x-test]=xxYahooxx
