--- a/kcal/kcal_manager.desktop
+++ b/kcal/kcal_manager.desktop
@@ -46,6 +46,7 @@ Name[sr@latin]=Kalendar
 Name[sv]=Kalender
 Name[th]=ปฎิทิน
 Name[tr]=Takvim
+Name[ug]=يىلنامە
 Name[uk]=Календар
 Name[wa]=Calindrî
 Name[x-test]=xxCalendarxx
