SVN_SILENT made messages (.desktop file)

--- a/kcal/kcal_manager.desktop
+++ b/kcal/kcal_manager.desktop
@@ -39,6 +39,7 @@ Name[ru]=Календарь
 Name[se]=Kaleandar
 Name[sk]=Kalendár
 Name[sl]=Koledar
+Name[sq]=Kalendari
 Name[sr]=Календар
 Name[sr@ijekavian]=Календар
 Name[sr@ijekavianlatin]=Kalendar
