--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -45,6 +45,7 @@ Name[ru]=Источники данных
 Name[se]=KDE-resurssat
 Name[sk]=KDE zdroje
 Name[sl]=Viri KDE
+Name[sq]=Resurset KDE
 Name[sr]=КДЕ ресурси
 Name[sr@ijekavian]=КДЕ ресурси
 Name[sr@ijekavianlatin]=KDE resursi
