--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -35,6 +35,7 @@ Name[ru]=Управление источниками данных
 Name[se]=KResources-gieđahalli
 Name[sk]=KResources manažér
 Name[sl]=Upravnik KResources
+Name[sq]=KResources Manager
 Name[sr]=Менаџер К‑ресурса
 Name[sr@ijekavian]=Менаџер К‑ресурса
 Name[sr@ijekavianlatin]=Menadžer K‑resursa
@@ -85,6 +86,7 @@ Comment[ru]=Управление источниками данных
 Comment[se]=KResources-gieđahalli
 Comment[sk]=KResources manažér
 Comment[sl]=Upravnik KResources
+Comment[sq]=KResources Manager
 Comment[sr]=Менаџер К‑ресурса
 Comment[sr@ijekavian]=Менаџер К‑ресурса
 Comment[sr@ijekavianlatin]=Menadžer K‑resursa
