--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -48,6 +48,7 @@ Name[ru]=Метод отправки
 Name[se]=E-boastta fievrridanvuohki
 Name[sk]=Mail Transport
 Name[sl]=Prenos pošte
+Name[sq]=Mail Transport
 Name[sr]=Транспорт поште
 Name[sr@ijekavian]=Транспорт поште
 Name[sr@ijekavianlatin]=Transport pošte
