--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -35,6 +35,7 @@ Name[ru]=Модуль KResources
 Name[se]=KResources-lassemodula
 Name[sk]=KResources zásuvný modul
 Name[sl]=Vstavek KResources
+Name[sq]=KResources Plugin
 Name[sr]=Прикључак радног оквира К‑ресурса
 Name[sr@ijekavian]=Прикључак радног оквира К‑ресурса
 Name[sr@ijekavianlatin]=Priključak radnog okvira K‑resursa
@@ -84,6 +85,7 @@ Comment[ro]=Modul de arhitectură KResurse
 Comment[ru]=Модуль инфраструктуры KResource
 Comment[sk]=KResources Framework zásuvný modul
 Comment[sl]=Vstavek za ogrodje KResources
+Comment[sq]=KResources Framework Plugin
 Comment[sr]=Прикључак радног оквира К‑ресурса
 Comment[sr@ijekavian]=Прикључак радног оквира К‑ресурса
 Comment[sr@ijekavianlatin]=Priključak radnog okvira K‑resursa
