Split out the fake entity cache so it can be shared.

--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -116,6 +116,7 @@ kde4_add_library(akonaditestfake STATIC
   fakemonitor.cpp
   fakeserverdata.cpp
   modelspy.cpp
+  fakeentitycache.cpp
   inspectablemonitor.cpp
 )
 
