Fix resource and application overwriting each other's changes
If the resource updates the collection's compatibility status, it may
clash with the application updating other collection parameters, with
resulting data loss.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(kalarm_calendar_LIB_SRCS
 if(KALARM_USE_AKONADI)
     set(kalarm_calendar_LIB_SRCS ${kalarm_calendar_LIB_SRCS}
 	collectionattribute.cpp
+	compatibilityattribute.cpp
 	eventattribute.cpp
     )
 endif(KALARM_USE_AKONADI)
