--- a/kpimtextedit/tests/CMakeLists.txt
+++ b/kpimtextedit/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
-set(textedittest_SRCS textedittest.cpp)
 add_definitions("-DQT_GUI_LIB") # to be able to use keyboard events like QTest::keyClick()
+
+set(textedittest_SRCS textedittest.cpp)
 kde4_add_unit_test(textedittest TESTNAME textedittest ${textedittest_SRCS})
 
 target_link_libraries(textedittest
@@ -9,4 +10,15 @@ target_link_libraries(textedittest
                       ${KDE4_KDECORE_LIBS}
                       ${KDE4_KDEUI_LIBS}
                       kmime
+                      kpimtextedit)
+
+set(textutilstest_SRCS textutilstest.cpp)
+kde4_add_unit_test(textutilstest TESTNAME textutilstest ${textutilstest_SRCS})
+
+target_link_libraries(textutilstest
+                      ${QT_QTTEST_LIBRARY}
+                      ${QT_QTCORE_LIBRARY}
+                      ${QT_QTGUI_LIBRARY}
+                      ${KDE4_KDECORE_LIBS}
+                      ${KDE4_KDEUI_LIBS}
                       kpimtextedit)
