SVN_SILENT made messages (.desktop file)

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -25,6 +25,7 @@ Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nds]=KAddressbook-Kortnarichten-Protokoll
 Name[nl]=KAddressbook Instant Messaging-protocol
 Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
+Name[pl]=Protokół komunikatora internetowego KAddressbook
 Name[pt]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[pt_BR]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[ro]=Protocol de mesagerie instantanee a cărții de adrese
