--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=AIM-protokoll
 Comment[nds]=AIM-Protokoll
 Comment[nl]=AIM-protocol
 Comment[nn]=AIM-protokoll
+Comment[pl]=Protokół AIM
 Comment[pt]=Protocolo AIM
 Comment[pt_BR]=Protocolo do AIM
 Comment[ro]=Protocol AIM
@@ -67,6 +68,7 @@ Name[nb]=AIM
 Name[nds]=AIM
 Name[nl]=AIM
 Name[nn]=AIM
+Name[pl]=AIM
 Name[pt]=AIM
 Name[pt_BR]=AIM
 Name[ro]=AIM
