--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
 Comment[nl]=Gadu-Gadu-protocol
 Comment[nn]=Gadu-Gadu-protokoll
+Comment[pl]=Protokół Gadu-Gadu
 Comment[pt]=Protocolo Gadu-Gadu
 Comment[pt_BR]=Protocolo do Gadu-Gadu
 Comment[ro]=Protocol Gadu-Gadu
@@ -67,6 +68,7 @@ Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
 Name[nl]=Gadu-Gadu
 Name[nn]=Gadu-Gadu
+Name[pl]=Gadu-Gadu
 Name[pt]=Gadu-Gadu
 Name[pt_BR]=Gadu-Gadu
 Name[ro]=Gadu-Gadu
