--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -26,6 +26,7 @@ Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
 Comment[nl]=Protocol voor Novell GroupWise Messenger
 Comment[nn]=Lynmeldingstenesta Novell GroupWise
+Comment[pl]=Komunikator Novell GroupWise
 Comment[pt]=Novell GroupWise Messenger
 Comment[pt_BR]=Mensageiro do GroupWise da Novell
 Comment[ro]=Mesagerul Novell GroupWise
@@ -66,6 +67,7 @@ Name[nb]=GroupWise
 Name[nds]=GroupWise
 Name[nl]=GroupWise
 Name[nn]=GroupWise
+Name[pl]=GroupWise
 Name[pt]=GroupWise
 Name[pt_BR]=GroupWise
 Name[ro]=GroupWise
