--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
 Comment[nl]=ICQ-protocol
 Comment[nn]=ICQ-protokoll
+Comment[pl]=Protokół ICQ
 Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
 Comment[ro]=Protocol ICQ
@@ -68,6 +69,7 @@ Name[nb]=ICQ
 Name[nds]=ICQ
 Name[nl]=ICQ
 Name[nn]=ICQ
+Name[pl]=ICQ
 Name[pt]=ICQ
 Name[pt_BR]=ICQ
 Name[ro]=ICQ
