--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=Internet Relay Chat
 Comment[nds]=Klöönsnack (Internet Relay Chat)
 Comment[nl]=Internet Relay Chat
 Comment[nn]=Internet Relay Chat
+Comment[pl]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
 Comment[pt_BR]=Bate-papo via Internet (IRC)
 Comment[ro]=Internet Relay Chat
@@ -67,6 +68,7 @@ Name[nb]=IRC
 Name[nds]=IRC
 Name[nl]=IRC
 Name[nn]=IRC
+Name[pl]=IRC
 Name[pt]=IRC
 Name[pt_BR]=IRC
 Name[ro]=IRC
