--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
 Comment[nl]=Jabber-protocol
 Comment[nn]=Jabber-protokoll
+Comment[pl]=Protokół Jabber
 Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
 Comment[ro]=Protocol Jabber
@@ -68,6 +69,7 @@ Name[nb]=Jabber
 Name[nds]=Jabber
 Name[nl]=Jabber
 Name[nn]=Jabber
+Name[pl]=Jabber
 Name[pt]=Jabber
 Name[pt_BR]=Jabber
 Name[ro]=Jabber
