--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
 Comment[nl]=MSN Messenger
 Comment[nn]=MSN Messenger
+Comment[pl]=MSN Messenger
 Comment[pt]=MSN Messenger
 Comment[pt_BR]=MSN Messenger
 Comment[ro]=Mesagerul MSN
@@ -66,6 +67,7 @@ Name[nb]=MSN Messenger
 Name[nds]=MSN-Kortnarichtenmaker
 Name[nl]=MSN Messenger
 Name[nn]=MSN Messenger
+Name[pl]=MSN Messenger
 Name[pt]=MSN Messenger
 Name[pt_BR]=MSN Messenger
 Name[ro]=Mesagerul MSN
