--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=Skype IP-telefoni
 Comment[nds]=Internet-Telefoneren mit Skype
 Comment[nl]=Skype internet-telefonie
 Comment[nn]=Skype Internett-telefoni
+Comment[pl]=Internetowa telefonia Skype
 Comment[pt]=Telefonia Internet Skype
 Comment[pt_BR]=Telefonia Internet Skype
 Comment[ro]=Telefonie prin internet Skype
@@ -66,6 +67,7 @@ Name[nb]=Skype
 Name[nds]=Skype
 Name[nl]=Skype
 Name[nn]=Skype
+Name[pl]=Skype
 Name[pt]=Skype
 Name[pt_BR]=Skype
 Name[ro]=Skype
