--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
 Comment[nl]=SMS-protocol
 Comment[nn]=SMS-protokoll
+Comment[pl]=Protokół SMS
 Comment[pt]=Protocolo SMS
 Comment[pt_BR]=Protocolo SMS
 Comment[ro]=Protocol SMS
@@ -68,6 +69,7 @@ Name[nb]=SMS
 Name[nds]=SMS
 Name[nl]=SMS
 Name[nn]=SMS
+Name[pl]=SMS
 Name[pt]=SMS
 Name[pt_BR]=SMS
 Name[ro]=SMS
