--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
 Comment[nl]=Yahoo-protocol
 Comment[nn]=Yahoo!-protokoll
+Comment[pl]=Protokół Yahoo
 Comment[pt]=Protocolo Yahoo
 Comment[pt_BR]=Protocolo do Yahoo
 Comment[ro]=Protocol Yahoo
@@ -67,6 +68,7 @@ Name[nb]=Yahoo
 Name[nds]=Yahoo
 Name[nl]=Yahoo
 Name[nn]=Yahoo
+Name[pl]=Yahoo
 Name[pt]=Yahoo
 Name[pt_BR]=Yahoo
 Name[ro]=Yahoo
