--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -35,6 +35,7 @@ Name[nds]=Kontakt-Akschonen
 Name[nl]=Contactpersoon-acties
 Name[nn]=Kontakthandlingar
 Name[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ
+Name[pl]=Działania kontaktu
 Name[pt]=Acções do Contacto
 Name[pt_BR]=Ações dos contatos
 Name[ro]=Acțiuni contacte
@@ -77,6 +78,7 @@ Comment[nds]=Kontakt-Akschonen instellen
 Comment[nl]=De contactpersoon-actie configureren
 Comment[nn]=Set opp kontakthandlingar
 Comment[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ ਸੰਰਚਨਾ
+Comment[pl]=Konfiguruj działania kontaktu
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
 Comment[ro]=Configurează acțiunile contact
