--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -27,6 +27,7 @@ Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
 Comment[nl]=Meanwhile-protocol
 Comment[nn]=Meanwhile-protokoll
+Comment[pl]=Protokół Meanwhile
 Comment[pt]=Protocolo Meanwhile
 Comment[pt_BR]=Protocolo do Meanwhile
 Comment[ro]=Protocol Meanwhile
@@ -67,6 +68,7 @@ Name[nb]=Meanwhile
 Name[nds]=Meanwhile
 Name[nl]=Meanwhile
 Name[nn]=Meanwhile
+Name[pl]=Meanwhile
 Name[pt]=Meanwhile
 Name[pt_BR]=Meanwhile
 Name[ro]=Meanwhile
