--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -27,6 +27,7 @@ Name[nds]=Kontact-Moduul
 Name[nl]=Kontact-plugin
 Name[nn]=Kontakt-tillegg
 Name[pa]=ਕੇਸੰਪਰਕ ਪਲੱਗਇਨ
+Name[pl]=Wtyczka Kontact
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
 Name[ro]=Modul Kontact
