--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -24,7 +24,7 @@ Name[lt]=KResursų priedas
 Name[lv]=KResources spraudnis
 Name[nb]=Programtillegg for KResources
 Name[nds]=KResources-Moduul
-Name[nl]=KResource-plugin
+Name[nl]=KResource-plug-in
 Name[nn]=Programtillegg for KResource-rammeverket
 Name[pa]=ਕੇਸਰੋਤ ਪਲੱਗਇਨ
 Name[pl]=Wtyczka KResource
@@ -75,7 +75,7 @@ Comment[lt]=KResursų aplinkos priedas
 Comment[lv]=KResource karkasa spraudnis
 Comment[nb]=Programtillegg for KResources-rammeverket
 Comment[nds]=Rahmenwark-Moduul för KResources
-Comment[nl]=KResource-raamwerkplugin
+Comment[nl]=KResource-raamwerkplug-in
 Comment[nn]=Programtillegg for KResource-rammeverket
 Comment[pa]=ਕੇਸਰੋਤ ਫਰੇਮਵਰਕ ਪਲੱਗਇਨ
 Comment[pl]=Wtyczka modułu KResource
