--- a/KdepimLibsConfig.cmake.in
+++ b/KdepimLibsConfig.cmake.in
@@ -71,6 +71,7 @@ _kdepimlibs_set_lib_vars(AKONADI_CALENDAR  akonadi-calendar)
 _kdepimlibs_set_lib_vars(AKONADI_CONTACT  akonadi-contact)
 _kdepimlibs_set_lib_vars(AKONADI_KABC   akonadi-kabc)
 _kdepimlibs_set_lib_vars(AKONADI_KMIME  akonadi-kmime)
+_kdepimlibs_set_lib_vars(AKONADI_NOTES  akonadi-notes)
 _kdepimlibs_set_lib_vars(GPGMEPP        gpgmepp)
 _kdepimlibs_set_lib_vars(KABC           kabc)
 if (NOT KDEPIMLIBS_NO_KCAL)
