SVN_SILENT made messages (.desktop file)

--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -38,6 +38,7 @@ Comment[sr@latin]=Novellov GroupWise Messenger
 Comment[sv]=Novell GroupWise-meddelandeklient
 Comment[th]=ข้อความด่วนทันใจ GroupWise ของโนเวลล์
 Comment[tr]=Novell GroupWise Messenger
+Comment[ug]=Novell GroupWise مۇڭداشقۇسى
 Comment[uk]=Програма обміну повідомленнями Novell GroupWise
 Comment[wa]=Messaedjî Novell GroupWise
 Comment[x-test]=xxNovell GroupWise Messengerxx
