--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -39,6 +39,7 @@ Comment[sr@ijekavianlatin]=Ćaskanje putem Interneta
 Comment[sr@latin]=Ćaskanje putem Interneta
 Comment[sv]=Internet Relay Chat
 Comment[tr]=Internet Relay Chat
+Comment[ug]=ئىنتېرنېت ئۇلاپ تارقىتىش سۆھبىتى(IRC)
 Comment[uk]=Internet Relay Chat
 Comment[wa]=Internet Relay Chat
 Comment[x-test]=xxInternet Relay Chatxx
@@ -81,6 +82,7 @@ Name[sr@latin]=IRC
 Name[sv]=IRC
 Name[th]=IRC
 Name[tr]=IRC
+Name[ug]=IRC
 Name[uk]=IRC
 Name[wa]=IRC
 Name[x-test]=xxIRCxx
