--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -80,6 +80,7 @@ Name[sr@latin]=Meanwhile
 Name[sv]=Meanwhile
 Name[th]=Meanwhile
 Name[tr]=Meanwhile
+Name[ug]=Meanwhile
 Name[uk]=Meanwhile
 Name[wa]=Meanwhile
 Name[x-test]=xxMeanwhilexx
