--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -38,6 +38,7 @@ Comment[sr@ijekavianlatin]=MSN Messenger
 Comment[sr@latin]=MSN Messenger
 Comment[sv]=MSN Messenger
 Comment[tr]=MSN Messenger
+Comment[ug]=MSN Messenger
 Comment[uk]=MSN Messenger
 Comment[wa]=MSN Messenger
 Comment[x-test]=xxMSN Messengerxx
@@ -79,6 +80,7 @@ Name[sr@ijekavianlatin]=MSN Messenger
 Name[sr@latin]=MSN Messenger
 Name[sv]=MSN Messenger
 Name[tr]=MSN Messenger
+Name[ug]=MSN Messenger
 Name[uk]=MSN Messenger
 Name[wa]=MSN Messenger
 Name[x-test]=xxMSN Messengerxx
