--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -47,6 +47,7 @@ Name[sr@latin]=Radnje sa kontaktima
 Name[sv]=Kontaktåtgärder
 Name[th]=การกระทำต่าง ๆ ของที่อยู่ติดต่อ
 Name[tr]=Kişi Eylemleri
+Name[ug]=ئالاقەداش مەشغۇلاتى
 Name[uk]=Дії контакту
 Name[wa]=Accions des contaks
 Name[x-test]=xxContact Actionsxx
