--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -43,6 +43,7 @@ Name[sr@latin]=Menadžer K‑resursa
 Name[sv]=Resurshantering
 Name[th]=ตัวจัดการทรัพยากร-K
 Name[tr]=KResources Yöneticisi
+Name[ug]=KResources باشقۇرغۇچ
 Name[uk]=Менеджер KResource-ів
 Name[wa]=Manaedjeu KResources
 Name[x-test]=xxKResources Managerxx
@@ -94,6 +95,7 @@ Comment[sr@latin]=Menadžer K‑resursa
 Comment[sv]=Resurshantering
 Comment[th]=ตัวจัดการทรัพยากร
 Comment[tr]=KResources Yöneticisi
+Comment[ug]=KResources باشقۇرغۇچ
 Comment[uk]=Менеджер KResource-ів
 Comment[wa]=Manaedjeu KResources
 Comment[x-test]=xxKResources Managerxx
