SVN_SILENT made messages (.desktop file)

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -30,10 +30,10 @@ Name[pt]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[pt_BR]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[ro]=Protocol de mesagerie instantanee a cărții de adrese
 Name[ru]=Протокол обмена мгновенными сообщениями KAddressBook
-Name[sr]=Брзогласнички протокол К‑адресра
-Name[sr@ijekavian]=Брзогласнички протокол К‑адресра
-Name[sr@ijekavianlatin]=Brzoglasnički protokol K‑adresra
-Name[sr@latin]=Brzoglasnički protokol K‑adresra
+Name[sr]=Брзогласнички протокол К‑адресара
+Name[sr@ijekavian]=Брзогласнички протокол К‑адресара
+Name[sr@ijekavianlatin]=Brzoglasnički protokol K‑adresara
+Name[sr@latin]=Brzoglasnički protokol K‑adresara
 Name[sv]=Addressbokens direktmeddelandeprotokoll
 Name[th]=โพรโทคอลข้อความด่วนทันใจของสมุดที่อยู่-K
 Name[tr]=KAdresDefteri Anlık Mesajlaşma Prokolü
