Fix build error on Windows.
    By linking with the kimap library instead of the imapstreamparser object
    this test can now be compiled on Windows.
    Also tested on GNU/Linux.

    Patch taken from KDE-Windows Emerge

--- a/kimap/tests/kimaptest/CMakeLists.txt
+++ b/kimap/tests/kimaptest/CMakeLists.txt
@@ -7,11 +7,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KDE4_ENABLE_EXCEPTIONS}")
 set(kimaptest_LIB_SRCS
    fakeserver.cpp
    mockjob.cpp
-   ../../imapstreamparser.cpp
 )
 
 kde4_add_library(kimaptest STATIC ${kimaptest_LIB_SRCS})
-target_link_libraries(kimaptest ${KDE4_KDECORE_LIBS} ${QT_QTNETWORK_LIBRARY} ${QT_QTTEST_LIBRARY})
+target_link_libraries(kimaptest ${KDE4_KDECORE_LIBS} ${QT_QTNETWORK_LIBRARY} ${QT_QTTEST_LIBRARY} kimap)
 install(TARGETS kimaptest ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 ########### install files ###############
