--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -131,6 +131,7 @@ set( akonadikde_LIB_SRC
   mimetypechecker.cpp
   monitor.cpp
   monitor_p.cpp
+  objectnotificationmessage.cpp
   partfetcher.cpp
   pastehelper.cpp
   persistentsearchattribute.cpp
