--- a/includes/tests/CMakeLists.txt
+++ b/includes/tests/CMakeLists.txt
@@ -32,6 +32,7 @@ include_directories(
 
 add_includes( Akonadi )
 add_includes( KABC )
+add_includes( KAlarmCal )
 add_includes( KCalCore )
 add_includes( KCalUtils )
 if (NOT KDEPIM_NO_KCAL)
