--- a/KdepimLibsConfig.cmake.in
+++ b/KdepimLibsConfig.cmake.in
@@ -74,6 +74,7 @@ _kdepimlibs_set_lib_vars(AKONADI_KMIME  akonadi-kmime)
 _kdepimlibs_set_lib_vars(AKONADI_NOTES  akonadi-notes)
 _kdepimlibs_set_lib_vars(GPGMEPP        gpgmepp)
 _kdepimlibs_set_lib_vars(KABC           kabc)
+_kdepimlibs_set_lib_vars(KALARMCAL      kalarmcal)
 if (NOT KDEPIMLIBS_NO_KCAL)
   _kdepimlibs_set_lib_vars(AKONADI_KCAL   akonadi-kcal)
   _kdepimlibs_set_lib_vars(KBLOG          kblog)
